#ifndef OOP_LOGGERMENU_H
#define OOP_LOGGERMENU_H

#include "Menu.h"

class LoggerMenu: public Menu {
public:
    void init() override;
};


#endif //OOP_LOGGERMENU_H
