@startuml
'https://plantuml.com/class-diagram

class Logger {
    -std::vector<Appender*> appenders;
    +Logger();
    +void add_appender(Appender* appender);
    +void log(Message& message);
    +~Logger();
}

class Appender {
    #std::string time();
    +virtual void append(Message& message) = 0;
    +virtual ~Appender();
}

class ConsoleAppender{
    +ConsoleAppender();
    +void append(Message &message) override;
}

class FileAppender{
    -std::fstream file;
    +FileAppender(std::string path);
    +void append(Message &message) override;
}

FileAppender --|> Appender
ConsoleAppender -up-|> Appender

Appender --o Logger

class Message{
    #virtual void print(std::ostream& stream) = 0;
    +friend std::ostream& operator<< (std::ostream& stream, Message& message);
    +virtual ~Message();
}

Message ..> Logger

class VictoryMessage{
    -int health;
    -int armor;
    -int damage;
    -int bombs;
    +VictoryMessage(int health, int armor, int damage, int bombs);
    +void print(std::ostream& stream) override;
}

class DefeatMessage{
    -std::pair<int, int> position;
    +DefeatMessage(std::pair<int,int> position);
    +void print(std::ostream& stream) override;
}

class NewGameMessage{
    +NewGameMessage();
    +void print(std::ostream& stream) override;
}

class NewLevelMessage{
    -std::pair<int, int> size;
    -std::pair<int, int> position;
    -int level_n;
    +NewLevelMessage(std::pair<int, int> size, std::pair<int, int> position, int level_n);
    +void print(std::ostream& stream) override;
}

class KeyWithCommandMessage{
    -int key;
    -std::string command;
    +KeyWithCommandMessage(int key, std::string command);
    +void print(std::ostream& stream) override;
}

class KeyWithoutCommandMessage{
    -int key;
    +KeyWithoutCommandMessage(int key);
    +void print(std::ostream& stream) override;
}

VictoryMessage -down-|> Message
DefeatMessage -down-|> Message
NewGameMessage -down-|> Message
NewLevelMessage -up-|> Message
KeyWithCommandMessage -left-|> Message
KeyWithoutCommandMessage -up-|> Message

class LoggerMenu{
    +void init() override;
}

@enduml